<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Learning</string>
    <string name="facebook_app_id">1519106185037424</string>
    <string name="title_inbox_fragment">Inbox</string>
    <string name="title_friends_fragment">Friends</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="sign_out">Sign out</string>
    <string name="empty_text">Type something to send</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">    Username</string>
    <string name="error_title">Oops! Sorry!</string>
    <string name="email_hint">Email</string>
    <string name="passsword_hint">    Password</string>
    <string name="login_button_label">Login</string>
    <string name="signup_text_label">Don\'t have an account? Click to SignUp!</string>
    <string name="login_text_label">Already have an account? Click to Login!</string>
    <string name="error_field_required">Field Required!</string>
    <string name="error_invalid_email">Invalid Email!</string>
    <string name="error_invalid_password">Password must be 5 characters long!</string>
    <string name="error_invalid_username">Username must be 5 characters long!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="sign_up_label">Sign Up!</string>
    <string name="search_hint">Search people</string>
    <string name="title_activity_user_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">Search</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="frnd_status_label">+ add freind</string>
    <string name="ping_label">Ping Me</string>
    <string name="add_friend_dialog_title">Add Friend?</string>
    <string name="friend_request_sent_label">Friend request sent</string>
    <string name="friend_request_error_label">Sorry! Friend request not sent!</string>
    <string name="friend_req_title">Friend Requests</string>
    <string name="title_activity_show_frnd_reqs">Friend Requests</string>
    <string name="accept_label">Accept</string>
    <string name="frnd_added">Friend added!</string>
    <string name="no_frnd_reqs_label">No Friend requests!</string>
    <string name="friends_label">Friends</string>
    <string name="title_chat_list">Chats</string>
    <string name="title_chat_detail">Chat Detail</string>
    <string name="title_facebook_login">Fb login</string>
    <string name="empty_search">Type to search people</string>
    <string name="chat_detail_empty_text">Send message to start conversation</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in&#8230;</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="com_facebook_tooltip_default">New! You\'re in control - choose what info you want to share with apps.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="title_activity_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="saving_image">Saving image</string>
    <string name="preparing_card">Preparing card</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>
    <string name="title_activity_profile_pic_dialog">ProfilePicDialogActivity</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>

</resources>