<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
   
    <item android:id="@+id/search"
          android:title="@string/search_title"
          android:icon="@drawable/ic_action_search"
          app:actionViewClass="android.support.v7.widget.SearchView" 
          app:showAsAction="always"/>
    
    <item
        android:id="@+id/sign_out"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/sign_out"/>
    
     <item android:id="@+id/friend_req"
          android:title="@string/friend_req_title"
          android:icon="@drawable/ic_action_add_person"
         app:showAsAction="ifRoom"
          />
     
     
</menu>