<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/search"
        android:actionViewClass="android.widget.SearchView"
        android:enabled="true"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="always"
        android:title="@string/search_title"/>
    <item
        android:id="@+id/profile"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="Profile"/>
    <item
        android:id="@+id/sign_out"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/sign_out"/>
    <item
        android:id="@+id/friend_req"
        android:icon="@drawable/ic_action_add_person"
        android:showAsAction="always"
        android:title="@string/friend_req_title"/>
    

</menu>