<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_ping"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.ankurmittal.learning.SignUpActivity" >

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/formView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/background_ping" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="391dp" >

            <LinearLayout
                android:id="@+id/editTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="130dp" >

                <EditText
                    android:id="@+id/usernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                   
                    android:background="@android:color/white"
                    android:ems="10"
                    android:hint="@string/username_hint"
                    android:maxLines="1" >

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/usernameEditText"
                    android:background="@android:color/white"
                    android:ems="10"
                    android:hint="@string/passsword_hint"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </LinearLayout>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                
                android:layout_below="@+id/editTextLayout"
                android:background="#49BDB6"
                android:text="@string/login_button_label" />

            <TextView
                android:id="@+id/usernameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
                android:text="@string/signup_text_label" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="18dp"
                android:text="@string/ping_label"
                android:textColor="@android:color/white"
                android:textSize="80sp" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>