<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ankurmittal.learning.SignUpActivity" >

       <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/formView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >
        
         

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            
            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="94dp"
                android:ems="10"
                android:focusable="true"
                android:hint="@string/username_hint"
                android:maxLines="1" >

                <requestFocus />
            </EditText>
            
            
            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/usernameEditText"
                android:layout_below="@+id/usernameEditText"
                android:ems="10"
                android:hint="Name"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/nameEditText"
                android:layout_below="@+id/nameEditText"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
            
            <EditText
                android:id="@+id/phnNumEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/emailEditText"
                android:layout_below="@+id/emailEditText"
                android:ems="10"
                android:hint="Phone Number"
                android:inputType="number"
                android:maxLines="1" />
            
            

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phnNumEditText"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/passsword_hint"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1" >

            </EditText>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/emailEditText"
                android:layout_alignRight="@+id/emailEditText"
                android:layout_below="@+id/passwordEditText"
                android:text="@string/sign_up_label" />

            <TextView
                android:id="@+id/usernameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:text="@string/login_text_label" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>